--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "build": "tsc",
-    "start": "node dist/app.js"
+    "build": "npx tsc",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
